ViTables ChangeLog
==================
** March 03, 2011 **
Added basic support for PyTables soft links and external links.

** February 26, 2011 **
Bug 338 has been fixed.

** February 25, 2011 **
Bug 333 has been fixed.

** February 24, 2011 **
Bug 334 has been fixed.

Bug 340 has been fixed.

** February 22, 2011 **
Fixed bug 341.

Fixed bug 348.

** February 16, 2011 **
Docs have been updated after checking that ViTables runs fine with Python 2.7.

** February 09, 2011 **
Issues specific to Windows Vista have been reworked in the NSIS installer script.

** February 05, 2011 **
Fixed a minor issue (specific to Windows Vista) in the NSIS installer script.

** February 02, 2011 **
Fixed a minor issue in the NSIS installer script.

Fixed a minor issue in the setup.py module.

The Users' Guide has been updated.

Packaging procedure changed accordingly to recent changes in timeseries plugin.

** February 01, 2011 **
The timeseries and menu plugins have been enhanced.

** January 28, 2011 **
Fixed a bug introduced in the CSV plugin in r220.

** January 27, 2011 **
Fixed a bug in the initial configuration setup.

** January 26, 2011 **
Fixed a small drag & drop issue.

Python strings and Unicode strings have been revisited.

The Makefile file for building the MSWindows installer has changed.

** January 25, 2011 **
Several files (mainly example scripts) have been updated.

** January 24, 2011 **
Fixed a bug in the startup settings of ViTables.

** January 22, 2011 **
The process for building documentation has been refined.

** January 20, 2011 **
The copyright statement has been updated.

The setup.py script has changed.

Applied a workaround to a PyQt4 4.8.2 bug.

Fixed some minor bugs regarding plugins.

** January 18, 2011 **
Fixed some minor issues in the creation of the Windows installer.

** January 17, 2011 **
Fine tuning the building process of the Windows installer.

Updated several files required for building the Windows installer.

** December 18, 2010 **