@@ -28,7 +28,9 @@ tree. The data structure is equivalent to a (non root) group node in a
 __docformat__ = 'restructuredtext'
 
 import vitables.utils
-import vitables.h5db.tnodeEditor as tnodeEditor
+from vitables.h5db import tnodeEditor
+from vitables.nodeProperties import nodeInfo
+from vitables.nodeProperties import nodePropDlg
 
 class GroupNode(object):
     """
@@ -141,3 +143,11 @@ class GroupNode(object):
         """Return an instance of `TNodeEditor`.
         """
         return tnodeEditor.TNodeEditor(self.dbt_model.getDBDoc(self.filepath))
+
+
+    def properties(self):
+        """The Properties dialog for this node.
+        """
+
+        info = nodeInfo.NodeInfo(self)
+        nodePropDlg.NodePropDlg(info)
