@@ -28,7 +28,9 @@ file.
 __docformat__ = 'restructuredtext'
 
 import vitables.utils
-import vitables.h5db.tnodeEditor as tnodeEditor
+from vitables.h5db import tnodeEditor
+from vitables.nodeProperties import nodeInfo
+from vitables.nodeProperties import nodePropDlg
 
 class RootGroupNode(object):
     """
@@ -151,3 +153,11 @@ class RootGroupNode(object):
         """Return an instance of `TNodeEditor`.
         """
         return tnodeEditor.TNodeEditor(self.dbt_model.getDBDoc(self.filepath))
+
+
+    def properties(self):
+        """The Properties dialog for this node.
+        """
+
+        info = nodeInfo.NodeInfo(self)
+        nodePropDlg.NodePropDlg(info)
